<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Lifelink</string>
    <string name="title_activity_lobby_joining">LobbyJoining</string>
    <string name="title_activity_lobby_creation">LobbyCreation</string>
    <string name="title_activity_ingame">Ingame</string>
    <string name="title_activity_name_change">NameChange</string>
    <string name="title_activity_color_change">ColorChange</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="create_lobby">Create Lobby</string>
    <string name="change_color">Change Color</string>
    <string name="change_name">Change Name</string>
    <string name="join_lobby">Join Lobby</string>
    <string name="_1">-1</string>
    <string name="plus1">+1</string>
    <string name="life">Life</string>
    <string name="color">Color:</string>
    <string name="name">Name:</string>
    <string name="update">Update</string>
    <string name="create">Create</string>
    <string name="current_life_count">Current life count</string>
    <string name="current_time">Current time</string>
    <string name="starting_lifecount">Starting LifeCount</string>
    <string name="time_limit">Time limit</string>
    <string name="time_on_off">Time on/off</string>
    <string name="_10">10</string>
    <string name="_20">20</string>
    <string name="_30">30</string>
    <string name="opponent1">Opponent1</string>
    <string name="opponent2">Opponent2</string>
    <string name="opponent3">Opponent3</string>
    <string name="pass_turn">Pass Turn</string>
    <string name="_1_30">1:30</string>
    <string name="title_activity_settings">Settings</string>
</resources>
