<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context="com.lifelink.lifelink.MainActivity">

    <Button
        android:id="@+id/gotoJoin"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:onClick="gotoJoin"
        android:text="@string/join_lobby"
        android:textAlignment="center"
        android:visibility="visible" />

    <Button
        android:id="@+id/gotoChangeName"
        android:layout_width="188dp"
        android:layout_height="100dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/gotoCreate"
        android:onClick="gotoChangeName"
        android:text="@string/change_name"
        android:textAlignment="center"
        android:visibility="visible" />

    <Button
        android:id="@+id/gotoChangeColor"
        android:layout_width="188dp"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/gotoCreate"
        android:onClick="gotoChangeColor"
        android:text="@string/change_color"
        android:textAlignment="center"
        android:visibility="visible" />

    <Button
        android:id="@+id/gotoCreate"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/gotoJoin"
        android:onClick="gotoCreate"
        android:text="@string/create_lobby"
        android:visibility="visible" />

</RelativeLayout>
