<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.lifelink.lifelink.LobbyCreation"
    android:clipChildren="false"
    android:clipToPadding="false">

    <!--
        TextView with the text "Starting Life"
    -->
    <TextView
        android:id="@+id/startingLifeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startig_lifecount"
        android:textSize="20sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp" />

    <!--
        Seekbar to set starting life count.
    -->
    <SeekBar
        android:id="@+id/setLifeCount"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/startingLifeText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp" />

    <!--
        Number field that displays the current starting
    -->
    <TextView
        android:id="@+id/currentLifeCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/current_life_count"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/setLifeCount"
        android:layout_centerHorizontal="true" />

    <!--
        TextView that informs the user what the togglebutton does.
    -->
    <TextView
        android:id="@+id/stringOnOff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/time_on_off"
        android:layout_above="@+id/setTimeValue"
        android:layout_toLeftOf="@+id/startingLifeText"
        android:layout_toStartOf="@+id/startingLifeText"
        android:layout_marginBottom="54dp" />

    <!--
        ToggleButton to set time settings on or off.
    -->
    <ToggleButton
        android:id="@+id/setTimeOnOff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/stringOnOff"
        android:layout_alignBottom="@+id/stringOnOff"
        android:layout_toEndOf="@+id/currentLifeCount"
        android:layout_toRightOf="@+id/currentLifeCount"
        android:checked="true" />

    <!--
        TextView that informs the user what the SeekBar under does.
    -->
    <TextView
        android:id="@+id/timeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/setTimeValue"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        android:text="@string/time_limit"
        android:visibility="visible" />

    <!--
        Seekbar to set starting time value.
    -->
    <SeekBar
        android:id="@+id/setTimeValue"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/gotoInLobby"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="93dp"
        android:visibility="visible" />

    <!--
        TextView that displays the current time value.
    -->
    <TextView
        android:id="@+id/currentTimeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/timeText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:padding="5dp"
        android:text="@string/current_time"
        android:visibility="visible" />

    <!--
        Button to go to InLobby.
    -->
    <Button
        android:id="@+id/gotoInLobby"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_alignEnd="@+id/startingLifeText"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/startingLifeText"
        android:layout_marginBottom="13dp"
        android:onClick="gotoInLobby"
        android:text="@string/create" />

</RelativeLayout>